Removed ArgumentValidator and refactored as standalone functions.

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   ],
   "author": "Bryce Marshall",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "@brycemarshall/exception": "^1.1.4",
+    "@brycemarshall/timespan": "^1.0.6"
+  }
 }
