Relocate NPM package files

--- a/npm-package/tsconfig.json
+++ b/npm-package/tsconfig.json
@@ -11,7 +11,7 @@
         "pretty": true
     },
     "include": [
-        "./repeat-schedule.nodejs/package-src"
+        "../repeat-schedule.nodejs/package-src"
     ],
     "exclude": [
         ".vscode",
